--- a/Mixer_Fmnt_26-01-2023_v1/Mixer_Fmnt_26-01-2023_v1.vcxproj
+++ b/Mixer_Fmnt_26-01-2023_v1/Mixer_Fmnt_26-01-2023_v1.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DlgProc_Support.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Mixer_Fmnt_26-01-2023_v1.h" />
     <ClInclude Include="Resource.h" />
