--- a/Fmnt_26-01-2023_v3/Fmnt_26-01-2023_v3.vcxproj.filters
+++ b/Fmnt_26-01-2023_v3/Fmnt_26-01-2023_v3.vcxproj.filters
@@ -21,14 +21,14 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Fmnt_26-01-2023_v3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DlgProc_Support.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Resource.h">
+      <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
