--- a/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj.filters
+++ b/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj.filters
@@ -34,7 +34,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WaveFile_Support.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
