--- a/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj.filters
+++ b/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="WaveFile_Support.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DlgProc_Support_Ex.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Audio_Capture_01-03-2023_v1.cpp">
