--- a/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj.filters
+++ b/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Ring_Buffer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MappingWaveFile_Support.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Audio_Capture_01-03-2023_v1.cpp">
