--- a/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj
+++ b/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="DlgProc_Support.hpp" />
     <ClInclude Include="DlgProc_Support_Ex.hpp" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="MappingWaveFile_Support.hpp" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Ring_Buffer.hpp" />
     <ClInclude Include="SDKWaveFile.hpp" />
