--- a/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj.filters
+++ b/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj.filters
@@ -9,7 +9,7 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="Source Files\Resource Files">
+    <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
@@ -53,15 +53,15 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Audio_Capture_01-03-2023_v1.rc">
-      <Filter>Source Files\Resource Files</Filter>
+      <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Audio_Capture_01-03-2023_v1.ico">
-      <Filter>Source Files\Resource Files</Filter>
+      <Filter>Resource Files</Filter>
     </Image>
     <Image Include="small.ico">
-      <Filter>Source Files</Filter>
+      <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
 </Project>
