--- a/Karplus_Strong_Algo_25-03-2023_v1/Karplus_Strong_Algo_25-03-2023_v1.vcxproj.filters
+++ b/Karplus_Strong_Algo_25-03-2023_v1/Karplus_Strong_Algo_25-03-2023_v1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Karplus_Strong_Algo_25-03-2023_v1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DlgProc_Support.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Karplus_Strong_Algo_25-03-2023_v1.cpp">
