--- a/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj.filters
+++ b/Audio_Capture_01-03-2023_v1/Audio_Capture_01-03-2023_v1.vcxproj.filters
@@ -52,7 +52,7 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="small.ico">
-      <Filter>Resource Files</Filter>
+      <Filter>Source Files</Filter>
     </Image>
   </ItemGroup>
 </Project>
